# gurih

./: .gitignore  Cargo.toml  check_output.txt  check_output_2.txt  check_types  clippy2.json  clippy3.json  clippy_out.json  clippy_out.txt  clippy_output.txt  commit_message.txt  debug_offset.py  exports.txt  find_dead_code.py  find_duplicate_functions.py  find_dups.py  find_unused_structs.py  generate_screenshots.py  gurih.kdl  gurih.md  run_all.sh  seed_large_db.sh  test_loop.md  test_move  test_move.rs  test_out.txt  test_output.txt  test_perf.sh
.Jules/: palette.md
.github/scripts/: rebase_bot.py
.github/workflows/: pr-rebase.yml  rust.yml
.jules/: bolt.md  palette.md  sentinel.md
crates/gurih_cli/: Cargo.toml
crates/gurih_cli/src/: faker.rs  frontend.rs  image_processor.rs  main.rs  security.rs
crates/gurih_common/: Cargo.toml
crates/gurih_common/src/: lib.rs  time.rs
crates/gurih_dsl/: Cargo.toml
crates/gurih_dsl/src/: ast.rs  compiler.rs  diagnostics.rs  errors.rs  expr.rs  lib.rs  parser.rs  utils.rs  validator.rs
crates/gurih_dsl/tests/: comparison_filter_test.rs  compiler_test.rs  custom_status_field_test.rs  dsl_finance_test.rs  employee_status_test.rs  error_snapshots.rs  finance_cost_center_test.rs  finance_module_test.rs  gurih_finance_immutability_test.rs  hr_dsl_test.rs  immutability_test.rs  integration_test.rs  minimal_test.rs  params_test.rs  parser_action_test.rs  parser_grid_test.rs  parser_test.rs  perf_benchmark.rs  persistence_test.rs  posting_test.rs  refactor_test.rs  rule_test.rs  siasn_kepegawaian_test.rs  siasn_workflow_test.rs  strictness_test.rs  syntax_error_test.rs  test_employee_status.rs  test_finance_dsl.kdl
crates/gurih_dsl/tests/snapshots/: error_snapshots__duplicate_entity_error.snap  error_snapshots__duplicate_field_error.snap  error_snapshots__missing_argument_error.snap  error_snapshots__route_to_unrecognized_page.snap  (+1 more)
crates/gurih_ir/: Cargo.toml
crates/gurih_ir/src/: lib.rs  utils.rs
crates/gurih_plugins/: Cargo.toml
crates/gurih_plugins/benches/: period_open.rs
crates/gurih_plugins/src/: finance.rs  hr.rs  lib.rs  utils.rs
crates/gurih_plugins/src/finance/: actions.rs  effects.rs  mod.rs  utils.rs  validation.rs
crates/gurih_plugins/tests/: bench_finance.rs  bench_finance_party_names.rs  finance_balance_check_test.rs  finance_closing_memory_test.rs  finance_closing_test.rs  finance_features_test.rs  finance_integrity_test.rs  finance_logic_test.rs  finance_memory_store_test.rs  finance_period_open_memory_test.rs  finance_period_overlap_test.rs  finance_period_params_test.rs  finance_posting_rule_test.rs  finance_precision_test.rs  finance_reverse_test.rs  finance_rules_test.rs  finance_snapshot_test.rs  finance_subledger_test.rs  hr_kgb_test.rs  hr_plugin_custom_effects_test.rs  hr_status_test.rs  hr_workflow_extended_test.rs  hr_workflow_test.rs  siasn_integration_test.rs
crates/gurih_runtime/: Cargo.toml
crates/gurih_runtime/src/: action.rs  auth.rs  constants.rs  context.rs  dashboard.rs  data.rs  datastore.rs  errors.rs  evaluator.rs  faker.rs  form.rs  hr_plugin.rs  image_processor.rs  lib.rs  page.rs  persistence.rs  plugins.rs  portal.rs  query_engine.rs  storage.rs  storage_engine.rs  traits.rs  validation.rs  workflow.rs
crates/gurih_runtime/src/store/: memory.rs  mod.rs  postgres.rs  sqlite.rs
crates/gurih_runtime/tests/: action_test.rs  audit_test.rs  auth_rate_limit_test.rs  auth_test.rs  bench_aggregate.rs  bench_create_many.rs  bench_datastore_init.rs  bench_evaluator.rs  bench_filter.rs  bench_hierarchy_performance.rs  bench_posting_rule.rs  comparison_ops_test.rs  composition_immutability_test.rs  dashboard_parsing_test.rs  dashboard_role_test.rs  database_error_handling.rs  datastore_test.rs  days_between_test.rs  evaluator_exists_test.rs  evaluator_recursion_test.rs  evaluator_unary_test.rs  faker_test.rs  finance_closing_test.rs  finance_features_test.rs  finance_integrity_test.rs  finance_logic_test.rs  finance_reconciliation_test.rs  finance_reverse_test.rs  finance_rules_test.rs  form_custom_test.rs  form_grid_test.rs  form_test.rs  hr_plugin_custom_effects_test.rs  hr_workflow_extended_test.rs  hr_workflow_test.rs  page_test.rs  performance_bench.rs  permission_create_test.rs  persistence_seed_test.rs  posting_rule_arbitrary_fields_test.rs  (+26 more)
docs/: GURIH_FRAMEWORK.md  generate_extra_screenshots.py  generate_screenshots.py  gurih-finance.md  gurih-siasn.md
gurih-finance/: audit.kdl  coa.kdl  dimensions.kdl  finance.db  gurih.kdl  integration.kdl  journal.kdl  period.kdl  reconciliation.kdl  reports.kdl  tax.kdl
gurih-hr/: gurih.kdl  organization.kdl  personnel.kdl  user.kdl
gurih-siasn/: app.kdl  cuti.kdl  kepegawaian.kdl  master.kdl  siasn.db  status.kdl  user.kdl  workflow.kdl
uow/pending/: feat-hr-payroll.kdl
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.js
web/src/: App.vue  api.js  style.css
web/src/components/: Accordion.vue  ActionCard.vue  Alert.vue  Avatar.vue  Breadcrumbs.vue  Button.vue  ConfirmModal.vue  CurrencyInput.vue  Dashboard.vue  DashboardWidget.vue  DataTable.vue  DatePicker.vue  DescriptionList.vue  DiscussionPanel.vue  Drawer.vue  DynamicForm.spec.js  DynamicForm.vue  DynamicPage.vue  EmptyState.vue  FileUpload.vue  FilterBar.vue  Icon.vue  InputGrid.spec.js  InputGrid.vue  KitchenSink.vue  Login.vue  MetricCard.vue  Modal.vue  Pagination.vue  Password.vue  ProgressBar.vue  RadioButton.vue  SelectInput.spec.js  SelectInput.vue  StatusBadge.vue  Steps.vue  Switch.vue  Tabs.vue  Timeline.vue  ToastNotification.vue  (+1 more)
