[workspace]
members = [
    "crates/gurih_ir",
    "crates/gurih_dsl",
    "crates/gurih_common",
    "crates/gurih_runtime",
    "crates/gurih_cli",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
gurih_common = { version = "0.1.0", path = "crates/gurih_common" }
gurih_dsl = { version = "0.1.0", path = "crates/gurih_dsl" }
gurih_ir = { version = "0.1.0", path = "crates/gurih_ir" }
gurih_runtime = { version = "0.1.0", path = "crates/gurih_runtime" }

# External crates
annotate-snippets = "0.12"
async-trait = "0.1.89"
axum = "0.8.8"
clap = { version = "4.5.54", features = ["derive"] }
insta = "1.40"
kdl = "6.5.0"
miette = { version = "7.6.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "sqlite", "runtime-tokio", "tls-native-tls", "any"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
symbol_table = {version = "0.5.0", features = ["serde", "global"] }