[package]
name = "gurih_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.5.54", features = ["derive"] }
gurih_dsl = { version = "0.1.0", path = "../gurih_dsl" }
gurih_ir = { version = "0.1.0", path = "../gurih_ir" }
gurih_runtime = { version = "0.1.0", path = "../gurih_runtime" }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
