[package]
name = "gurih_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
gurih_dsl = { workspace = true }
gurih_ir = { workspace = true }
gurih_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
