[package]
name = "gurih_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
clap = { workspace = true }
gurih_dsl = { workspace = true }
gurih_ir = { workspace = true }
gurih_runtime = { workspace = true }
notify = "8.2.0"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
uuid = { workspace = true }
symbol_table = {workspace = true }
