[package]
name = "gurih_plugins"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
gurih_common = { workspace = true }
gurih_ir = { workspace = true }
gurih_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
