[package]
name = "gurih_plugins"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
gurih_ir = { workspace = true }
gurih_runtime = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = "1.40.0"
futures = "0.3.32"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
gurih_dsl = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "period_open"
harness = false
