[package]
name = "gurih_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
gurih_common = { workspace = true }
gurih_ir = { workspace = true }
hex = "0.4.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
sqlx = { workspace = true, features = [ "chrono" ] }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
aws-config = "1.1.7"
aws-sdk-s3 = "1.21.0"
image = "0.24.9"
base64 = "0.21.7"
symbol_table = {workspace = true }
bytes = "1.11.0"

[dev-dependencies]
gurih_dsl = { workspace = true }
