[package]
name = "gurih_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
pbkdf2 = "0.12"
subtle = "2.4"
hmac = "0.12.1"
async-trait = { workspace = true }
gurih_common = { workspace = true }
gurih_ir = { workspace = true }
hex = "0.4.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
sqlx = { workspace = true, features = [ "chrono" ] }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust-s3 = "0.37"
image = "0.25"
base64 = "0.22"
symbol_table = {workspace = true }
bytes = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
gurih_dsl = { workspace = true }
