[package]
name = "gurih_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
gurih_ir = { workspace = true }
hex = "0.4.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
sqlx = { workspace = true, features = [ "chrono" ] }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust-s3 = "0.37"
base64 = "0.22"
symbol_table = {workspace = true }
bytes = { workspace = true }

[dev-dependencies]
gurih_dsl = { workspace = true }
